# basedmypy

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CREDITS  MANIFEST.in  README.md  mypy-requirements.txt  mypy_bootstrap.ini  mypy_self_check.ini  mypy_self_check_strict.ini  pyproject.toml  pytest.ini  runtests.py  setup.cfg  setup.py  test-requirements.txt  test.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.md
.github/workflows/: build_wheels.yml  docs.yml  mypy_primer.yml  mypy_primer_comment.yml  publish.yml  publish_docs.yml  release.yml  test.yml
.mypy/: baseline.json  proper_plugin.json
docs/: README.md
docs/source/: based_features.rst  based_inference.rst  baseline.rst  command_line.rst  conf.py  config_file.rst  error_code_list.rst  error_code_list2.rst  index.rst  (+6 more)
misc/: analyze_cache.py  apply-cache-diff.py  cherry-pick-typeshed.py  diff-cache.py  find_type.py  incremental_checker.py  install.py  trigger_wheel_build.sh  upload-pypi.py
mypy/: applytype.py  binder.py  build.py  build.py.isorted  checker.py  checkexpr.py  checkmember.py  checkstrformat.py  config_parser.py  constraints.py  copytype.py  defaults.py  dmypy_os.py  dmypy_server.py  erasetype.py  errorcodes.py  errors.py  expandtype.py  exprtotype.py  fastparse.py  fastparse2.py  find_sources.py  fixup.py  indirection.py  ipc.py  join.py  main.py  maptype.py  meet.py  memprofile.py  message_registry.py  messages.py  metastore.py  modulefinder.py  moduleinspect.py  nodes.py  options.py  plugin.py  pyinfo.py  reachability.py  (+30 more)
(+333 files in other folders)
