[build-system]
requires = [
    "setuptools >= 40.6.2",
    "wheel >= 0.30.0",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 99
target-version = ['py37']
skip-magic-trailing-comma = true
extend-exclude = '''
^/mypy/typeshed|
^/test-data/unit/lib-stub/blocker.pyi
'''

[tool.isort]
profile = "black"
line_length = 99
combine_as_imports = true
skip_gitignore = true
extra_standard_library = ["typing_extensions"]
skip = [
    "mypy/typeshed",
    "test-data/unit/lib-stub/blocker.pyi",
]
